# project-co

./: Datos.dzn  LICENSE  PlantaEnergia.mzn  README.md  data.dzn  model.mzn  pyproject.toml  temp3.mzn
src/: Datos copy.dzn  Datos.dzn  PlantaEnergia.mzn  gui.py  utils.py
